2009-08-03  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Fully initialize generic hoisted field expression.

2009-08-02  Miguel de Icaza  <miguel@novell.com>

	* cs-parser.jay: Flag variables declared on the interactive shell
	as used to prevent the 168 warning about local variable not being
	used. 

2009-07-31  Marek Safar  <marek.safar@gmail.com>

	* parameter.cs, dynamic.cs, support.cs, class.cs, delegate.cs,
	attribute.cs: Emit dynamic export attribute.

2009-07-30  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: More verifier work.

2009-07-29  Marek Safar  <marek.safar@gmail.com>

	* nullable.cs: Fixed SRE crash during corlib compilation.

2009-07-29  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, typemanager.cs, decl.cs, iterators.cs, convert.cs,
	nullable.cs, expression.cs, ecore.cs, class.cs, attribute.cs:
	More TypeManager.TypeToCoreType needed.

2009-07-29  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Update after recent SRE fixes.

2009-07-28  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, expression.cs, ecore.cs, delegate.cs: Use correct
	version of GetFieldHandle for fields of generic types.

2009-07-27  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, argument.cs, convert.cs, assign.cs, expression.cs,
	ecore.cs: Add TypeManager.IsDynamicType,
	PredefinedAttributes.Dynamic.

2009-07-27  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #415375
	* expression.cs: Fixed object and reference type parameter
	comparison.

2009-07-27  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #525342
	* class.cs: Attach partial method attributes to method
	implementation.

2009-07-24  Marek Safar  <marek.safar@gmail.com>

	* argument.cs, dynamic.cs, expression.cs, class.cs, attribute.cs:
	Dynamic arguments.

2009-07-24  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs (MutateField): Add imported types handling.

2009-07-23  Marek Safar  <marek.safar@gmail.com>
